// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductMenuSection empty section no text 1`] = `
<ProductMenuSection
  config={
    Immutable.Record {
      "activeJobIconCls": "fa-spinner fa-pulse",
      "emptyText": undefined,
      "filteredEmptyText": undefined,
      "emptyAppURL": undefined,
      "emptyURLText": "Get started...",
      "headerURLPart": undefined,
      "headerText": undefined,
      "iconCls": undefined,
      "iconURL": "/testProduct/images/samples.svg",
      "showActiveJobIcon": true,
      "staticContent": false,
      "useOriginalURL": false,
    }
  }
  containerPath="/test/path"
  currentProductId="testProduct"
  section={
    Immutable.Record {
      "label": "Sample Sets",
      "url": undefined,
      "items": Immutable.List [],
      "totalCount": 0,
      "key": "samples",
      "productId": undefined,
      "sectionKey": undefined,
    }
  }
>
  <div
    className="product-menu-section-header"
  >
    <ul>
      <li
        className="menu-section-header clickable-item"
      >
        <Link
          to="/samples"
        />
      </li>
      <li>
        <hr />
      </li>
    </ul>
  </div>
  <div
    className="product-menu-section"
  >
    <ul />
  </div>
</ProductMenuSection>
`;

exports[`ProductMenuSection empty section with empty text and create link 1`] = `
<ProductMenuSection
  config={
    Immutable.Record {
      "activeJobIconCls": "fa-spinner fa-pulse",
      "emptyText": "Test empty text",
      "filteredEmptyText": "Empty due to exclusion",
      "emptyAppURL": undefined,
      "emptyURLText": "Test empty link",
      "headerURLPart": undefined,
      "headerText": undefined,
      "iconCls": undefined,
      "iconURL": "/testProduct/images/samples.svg",
      "showActiveJobIcon": true,
      "staticContent": false,
      "useOriginalURL": false,
    }
  }
  containerPath="/test/path"
  currentProductId="testProduct"
  section={
    Immutable.Record {
      "label": "Sample Sets",
      "url": undefined,
      "items": Immutable.List [],
      "totalCount": 0,
      "key": "samples",
      "productId": undefined,
      "sectionKey": undefined,
    }
  }
>
  <div
    className="product-menu-section-header"
  >
    <ul>
      <li
        className="menu-section-header clickable-item"
      >
        <Link
          to="/samples"
        />
      </li>
      <li>
        <hr />
      </li>
    </ul>
  </div>
  <div
    className="product-menu-section"
  >
    <ul>
      <li
        className="empty-section"
      >
        Test empty text
      </li>
    </ul>
  </div>
</ProductMenuSection>
`;

exports[`ProductMenuSection not empty, but all items hidden 1`] = `
<ProductMenuSection
  config={
    Immutable.Record {
      "activeJobIconCls": "fa-spinner fa-pulse",
      "emptyText": "Test empty text",
      "filteredEmptyText": "Empty due to exclusion",
      "emptyAppURL": undefined,
      "emptyURLText": "Test empty link",
      "headerURLPart": undefined,
      "headerText": undefined,
      "iconCls": undefined,
      "iconURL": "/testProduct/images/samples.svg",
      "showActiveJobIcon": true,
      "staticContent": false,
      "useOriginalURL": false,
    }
  }
  containerPath="/test/path"
  currentProductId="testProduct"
  section={
    Immutable.Record {
      "label": "Sample Sets",
      "url": undefined,
      "items": Immutable.List [
        Immutable.Record {
          "id": 1,
          "key": undefined,
          "label": "Sample Set 1",
          "url": undefined,
          "hidden": true,
          "orderNum": undefined,
          "originalUrl": undefined,
          "requiresLogin": false,
          "hasActiveJob": false,
          "fromSharedContainer": false,
        },
        Immutable.Record {
          "id": 2,
          "key": undefined,
          "label": "Sample Set 2",
          "url": undefined,
          "hidden": true,
          "orderNum": undefined,
          "originalUrl": undefined,
          "requiresLogin": false,
          "hasActiveJob": true,
          "fromSharedContainer": false,
        },
      ],
      "totalCount": 0,
      "key": "samples",
      "productId": undefined,
      "sectionKey": undefined,
    }
  }
>
  <div
    className="product-menu-section-header"
  >
    <ul>
      <li
        className="menu-section-header clickable-item"
      >
        <Link
          to="/samples"
        />
      </li>
      <li>
        <hr />
      </li>
    </ul>
  </div>
  <div
    className="product-menu-section"
  >
    <ul>
      <li
        className="empty-section"
      >
        Empty due to exclusion
      </li>
    </ul>
  </div>
</ProductMenuSection>
`;

exports[`ProductMenuSection one column section 1`] = `
<ProductMenuSection
  config={
    Immutable.Record {
      "activeJobIconCls": "fa-spinner fa-pulse",
      "emptyText": undefined,
      "filteredEmptyText": undefined,
      "emptyAppURL": undefined,
      "emptyURLText": "Get started...",
      "headerURLPart": undefined,
      "headerText": undefined,
      "iconCls": undefined,
      "iconURL": "/testProduct4Columns/images/assays.svg",
      "showActiveJobIcon": true,
      "staticContent": false,
      "useOriginalURL": false,
    }
  }
  containerPath="/test/path"
  currentProductId="testProduct4Columns"
  section={
    Immutable.Record {
      "label": "Assays",
      "url": undefined,
      "items": Immutable.List [
        Immutable.Record {
          "id": 11,
          "key": undefined,
          "label": "Assay 1",
          "url": undefined,
          "hidden": false,
          "orderNum": undefined,
          "originalUrl": undefined,
          "requiresLogin": false,
          "hasActiveJob": false,
          "fromSharedContainer": false,
        },
        Immutable.Record {
          "id": 12,
          "key": undefined,
          "label": "Assay 2",
          "url": undefined,
          "hidden": false,
          "orderNum": undefined,
          "originalUrl": undefined,
          "requiresLogin": false,
          "hasActiveJob": false,
          "fromSharedContainer": false,
        },
        Immutable.Record {
          "id": 13,
          "key": undefined,
          "label": "Assay 3",
          "url": undefined,
          "hidden": false,
          "orderNum": undefined,
          "originalUrl": undefined,
          "requiresLogin": false,
          "hasActiveJob": false,
          "fromSharedContainer": false,
        },
        Immutable.Record {
          "id": 14,
          "key": undefined,
          "label": "Assay 4",
          "url": undefined,
          "hidden": false,
          "orderNum": undefined,
          "originalUrl": undefined,
          "requiresLogin": false,
          "hasActiveJob": false,
          "fromSharedContainer": false,
        },
        Immutable.Record {
          "id": 15,
          "key": undefined,
          "label": "Assay 5",
          "url": undefined,
          "hidden": false,
          "orderNum": undefined,
          "originalUrl": undefined,
          "requiresLogin": false,
          "hasActiveJob": false,
          "fromSharedContainer": false,
        },
      ],
      "totalCount": 0,
      "key": "assays",
      "productId": undefined,
      "sectionKey": undefined,
    }
  }
>
  <div
    className="product-menu-section-header"
  >
    <ul>
      <li
        className="menu-section-header clickable-item"
      >
        <Link
          to="/assays"
        />
      </li>
      <li>
        <hr />
      </li>
    </ul>
  </div>
  <div
    className="product-menu-section"
  >
    <ul>
      <li
        key="Assay 1"
      >
        <MenuSectionItemLabel
          config={
            Immutable.Record {
              "activeJobIconCls": "fa-spinner fa-pulse",
              "emptyText": undefined,
              "filteredEmptyText": undefined,
              "emptyAppURL": undefined,
              "emptyURLText": "Get started...",
              "headerURLPart": undefined,
              "headerText": undefined,
              "iconCls": undefined,
              "iconURL": "/testProduct4Columns/images/assays.svg",
              "showActiveJobIcon": true,
              "staticContent": false,
              "useOriginalURL": false,
            }
          }
          item={
            Immutable.Record {
              "id": 11,
              "key": undefined,
              "label": "Assay 1",
              "url": undefined,
              "hidden": false,
              "orderNum": undefined,
              "originalUrl": undefined,
              "requiresLogin": false,
              "hasActiveJob": false,
              "fromSharedContainer": false,
            }
          }
        >
          Assay 1
        </MenuSectionItemLabel>
      </li>
      <li
        key="Assay 2"
      >
        <MenuSectionItemLabel
          config={
            Immutable.Record {
              "activeJobIconCls": "fa-spinner fa-pulse",
              "emptyText": undefined,
              "filteredEmptyText": undefined,
              "emptyAppURL": undefined,
              "emptyURLText": "Get started...",
              "headerURLPart": undefined,
              "headerText": undefined,
              "iconCls": undefined,
              "iconURL": "/testProduct4Columns/images/assays.svg",
              "showActiveJobIcon": true,
              "staticContent": false,
              "useOriginalURL": false,
            }
          }
          item={
            Immutable.Record {
              "id": 12,
              "key": undefined,
              "label": "Assay 2",
              "url": undefined,
              "hidden": false,
              "orderNum": undefined,
              "originalUrl": undefined,
              "requiresLogin": false,
              "hasActiveJob": false,
              "fromSharedContainer": false,
            }
          }
        >
          Assay 2
        </MenuSectionItemLabel>
      </li>
      <li
        key="Assay 3"
      >
        <MenuSectionItemLabel
          config={
            Immutable.Record {
              "activeJobIconCls": "fa-spinner fa-pulse",
              "emptyText": undefined,
              "filteredEmptyText": undefined,
              "emptyAppURL": undefined,
              "emptyURLText": "Get started...",
              "headerURLPart": undefined,
              "headerText": undefined,
              "iconCls": undefined,
              "iconURL": "/testProduct4Columns/images/assays.svg",
              "showActiveJobIcon": true,
              "staticContent": false,
              "useOriginalURL": false,
            }
          }
          item={
            Immutable.Record {
              "id": 13,
              "key": undefined,
              "label": "Assay 3",
              "url": undefined,
              "hidden": false,
              "orderNum": undefined,
              "originalUrl": undefined,
              "requiresLogin": false,
              "hasActiveJob": false,
              "fromSharedContainer": false,
            }
          }
        >
          Assay 3
        </MenuSectionItemLabel>
      </li>
      <li
        key="Assay 4"
      >
        <MenuSectionItemLabel
          config={
            Immutable.Record {
              "activeJobIconCls": "fa-spinner fa-pulse",
              "emptyText": undefined,
              "filteredEmptyText": undefined,
              "emptyAppURL": undefined,
              "emptyURLText": "Get started...",
              "headerURLPart": undefined,
              "headerText": undefined,
              "iconCls": undefined,
              "iconURL": "/testProduct4Columns/images/assays.svg",
              "showActiveJobIcon": true,
              "staticContent": false,
              "useOriginalURL": false,
            }
          }
          item={
            Immutable.Record {
              "id": 14,
              "key": undefined,
              "label": "Assay 4",
              "url": undefined,
              "hidden": false,
              "orderNum": undefined,
              "originalUrl": undefined,
              "requiresLogin": false,
              "hasActiveJob": false,
              "fromSharedContainer": false,
            }
          }
        >
          Assay 4
        </MenuSectionItemLabel>
      </li>
      <li
        key="Assay 5"
      >
        <MenuSectionItemLabel
          config={
            Immutable.Record {
              "activeJobIconCls": "fa-spinner fa-pulse",
              "emptyText": undefined,
              "filteredEmptyText": undefined,
              "emptyAppURL": undefined,
              "emptyURLText": "Get started...",
              "headerURLPart": undefined,
              "headerText": undefined,
              "iconCls": undefined,
              "iconURL": "/testProduct4Columns/images/assays.svg",
              "showActiveJobIcon": true,
              "staticContent": false,
              "useOriginalURL": false,
            }
          }
          item={
            Immutable.Record {
              "id": 15,
              "key": undefined,
              "label": "Assay 5",
              "url": undefined,
              "hidden": false,
              "orderNum": undefined,
              "originalUrl": undefined,
              "requiresLogin": false,
              "hasActiveJob": false,
              "fromSharedContainer": false,
            }
          }
        >
          Assay 5
        </MenuSectionItemLabel>
      </li>
    </ul>
  </div>
</ProductMenuSection>
`;

exports[`ProductMenuSection one-column section 1`] = `
<ProductMenuSection
  config={
    Immutable.Record {
      "activeJobIconCls": "fa-spinner fa-pulse",
      "emptyText": undefined,
      "filteredEmptyText": undefined,
      "emptyAppURL": undefined,
      "emptyURLText": "Get started...",
      "headerURLPart": undefined,
      "headerText": undefined,
      "iconCls": undefined,
      "iconURL": "/testProduct3Columns/images/samples.svg",
      "showActiveJobIcon": true,
      "staticContent": false,
      "useOriginalURL": false,
    }
  }
  containerPath="/test/path"
  currentProductId="testProduct3Columns"
  section={
    Immutable.Record {
      "label": "Sample Sets",
      "url": undefined,
      "items": Immutable.List [
        Immutable.Record {
          "id": 1,
          "key": undefined,
          "label": "Sample Set 1",
          "url": undefined,
          "hidden": false,
          "orderNum": undefined,
          "originalUrl": undefined,
          "requiresLogin": false,
          "hasActiveJob": false,
          "fromSharedContainer": false,
        },
        Immutable.Record {
          "id": 2,
          "key": undefined,
          "label": "Sample Set 2",
          "url": undefined,
          "hidden": false,
          "orderNum": undefined,
          "originalUrl": undefined,
          "requiresLogin": false,
          "hasActiveJob": true,
          "fromSharedContainer": false,
        },
        Immutable.Record {
          "id": 3,
          "key": undefined,
          "label": "Sample Set 3",
          "url": undefined,
          "hidden": false,
          "orderNum": undefined,
          "originalUrl": undefined,
          "requiresLogin": false,
          "hasActiveJob": false,
          "fromSharedContainer": false,
        },
        Immutable.Record {
          "id": 4,
          "key": undefined,
          "label": "Sample Set 4",
          "url": undefined,
          "hidden": false,
          "orderNum": undefined,
          "originalUrl": undefined,
          "requiresLogin": false,
          "hasActiveJob": false,
          "fromSharedContainer": false,
        },
      ],
      "totalCount": 0,
      "key": "samples",
      "productId": undefined,
      "sectionKey": undefined,
    }
  }
>
  <div
    className="product-menu-section-header"
  >
    <ul>
      <li
        className="menu-section-header clickable-item"
      >
        <Link
          to="/samples"
        />
      </li>
      <li>
        <hr />
      </li>
    </ul>
  </div>
  <div
    className="product-menu-section"
  >
    <ul>
      <li
        key="Sample Set 1"
      >
        <MenuSectionItemLabel
          config={
            Immutable.Record {
              "activeJobIconCls": "fa-spinner fa-pulse",
              "emptyText": undefined,
              "filteredEmptyText": undefined,
              "emptyAppURL": undefined,
              "emptyURLText": "Get started...",
              "headerURLPart": undefined,
              "headerText": undefined,
              "iconCls": undefined,
              "iconURL": "/testProduct3Columns/images/samples.svg",
              "showActiveJobIcon": true,
              "staticContent": false,
              "useOriginalURL": false,
            }
          }
          item={
            Immutable.Record {
              "id": 1,
              "key": undefined,
              "label": "Sample Set 1",
              "url": undefined,
              "hidden": false,
              "orderNum": undefined,
              "originalUrl": undefined,
              "requiresLogin": false,
              "hasActiveJob": false,
              "fromSharedContainer": false,
            }
          }
        >
          Sample Set 1
        </MenuSectionItemLabel>
      </li>
      <li
        key="Sample Set 2"
      >
        <MenuSectionItemLabel
          config={
            Immutable.Record {
              "activeJobIconCls": "fa-spinner fa-pulse",
              "emptyText": undefined,
              "filteredEmptyText": undefined,
              "emptyAppURL": undefined,
              "emptyURLText": "Get started...",
              "headerURLPart": undefined,
              "headerText": undefined,
              "iconCls": undefined,
              "iconURL": "/testProduct3Columns/images/samples.svg",
              "showActiveJobIcon": true,
              "staticContent": false,
              "useOriginalURL": false,
            }
          }
          item={
            Immutable.Record {
              "id": 2,
              "key": undefined,
              "label": "Sample Set 2",
              "url": undefined,
              "hidden": false,
              "orderNum": undefined,
              "originalUrl": undefined,
              "requiresLogin": false,
              "hasActiveJob": true,
              "fromSharedContainer": false,
            }
          }
        >
          <i
            className="fa fa-spinner fa-pulse"
          />
          <span
            className="spacer-left product-menu-item"
          >
            Sample Set 2
          </span>
        </MenuSectionItemLabel>
      </li>
      <li
        key="Sample Set 3"
      >
        <MenuSectionItemLabel
          config={
            Immutable.Record {
              "activeJobIconCls": "fa-spinner fa-pulse",
              "emptyText": undefined,
              "filteredEmptyText": undefined,
              "emptyAppURL": undefined,
              "emptyURLText": "Get started...",
              "headerURLPart": undefined,
              "headerText": undefined,
              "iconCls": undefined,
              "iconURL": "/testProduct3Columns/images/samples.svg",
              "showActiveJobIcon": true,
              "staticContent": false,
              "useOriginalURL": false,
            }
          }
          item={
            Immutable.Record {
              "id": 3,
              "key": undefined,
              "label": "Sample Set 3",
              "url": undefined,
              "hidden": false,
              "orderNum": undefined,
              "originalUrl": undefined,
              "requiresLogin": false,
              "hasActiveJob": false,
              "fromSharedContainer": false,
            }
          }
        >
          Sample Set 3
        </MenuSectionItemLabel>
      </li>
      <li
        key="Sample Set 4"
      >
        <MenuSectionItemLabel
          config={
            Immutable.Record {
              "activeJobIconCls": "fa-spinner fa-pulse",
              "emptyText": undefined,
              "filteredEmptyText": undefined,
              "emptyAppURL": undefined,
              "emptyURLText": "Get started...",
              "headerURLPart": undefined,
              "headerText": undefined,
              "iconCls": undefined,
              "iconURL": "/testProduct3Columns/images/samples.svg",
              "showActiveJobIcon": true,
              "staticContent": false,
              "useOriginalURL": false,
            }
          }
          item={
            Immutable.Record {
              "id": 4,
              "key": undefined,
              "label": "Sample Set 4",
              "url": undefined,
              "hidden": false,
              "orderNum": undefined,
              "originalUrl": undefined,
              "requiresLogin": false,
              "hasActiveJob": false,
              "fromSharedContainer": false,
            }
          }
        >
          Sample Set 4
        </MenuSectionItemLabel>
      </li>
    </ul>
  </div>
</ProductMenuSection>
`;

exports[`ProductMenuSection section with custom headerURL and headerText 1`] = `
<ProductMenuSection
  config={
    Immutable.Record {
      "activeJobIconCls": "fa-spinner fa-pulse",
      "emptyText": undefined,
      "filteredEmptyText": undefined,
      "emptyAppURL": undefined,
      "emptyURLText": "Get started...",
      "headerURLPart": AppURL {
        "_baseUrl": "/sample/new",
        "_params": {
          "sort": "date",
        },
      },
      "headerText": "Custom Sample Sets",
      "iconCls": undefined,
      "iconURL": "/testProduct/images/samples.svg",
      "showActiveJobIcon": true,
      "staticContent": false,
      "useOriginalURL": false,
    }
  }
  containerPath="/test/path"
  currentProductId="testProductHeaderUrl"
  section={
    Immutable.Record {
      "label": "Sample Sets",
      "url": undefined,
      "items": Immutable.List [],
      "totalCount": 0,
      "key": "samples",
      "productId": undefined,
      "sectionKey": undefined,
    }
  }
>
  <div
    className="product-menu-section-header"
  >
    <ul>
      <li
        className="menu-section-header clickable-item"
      >
        <Link
          to="%2Fsample%2Fnew%3Fsort%3Ddate"
        />
      </li>
      <li>
        <hr />
      </li>
    </ul>
  </div>
  <div
    className="product-menu-section"
  >
    <ul />
  </div>
</ProductMenuSection>
`;
